# sudoku_solver

./: .gitignore  LICENSE  README.md  app.py  app_funcs.py  app_text.py  demo_app.py  dockerfile  dummy.pkl  example_board.py  example_boards.py  pyproject.toml  sandbox.ipynb  saved.py  solver.py  sudoku.py  tasks.todo  test  to_do.txt
tests/: test_sudoku.py
